welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:6: error: ';' expected but '(' found.
    var couleur:Boolean==getCouleurSol()
                                      ^